# bifrost

./: .gitignore  CMakeLists.txt  README.md  build.sh  resources.qrc  test.sh
src/: bifrost.cpp  bifrost.h  bifrostcfgdiff.cpp  bifrostcfgdiff.h  bifrostdiffdb.cpp  bifrostdiffdb.h  bifrostdiffdialog.cpp  bifrostdiffdialog.h  bifrostdiffengine.cpp  bifrostdiffengine.h  bifrostdiffstore.cpp  bifrostdiffstore.h  bifrostdiffview.cpp  bifrostdiffview.h  bifrostexport.cpp  bifrostexport.h  bifrostfeatures.cpp  bifrostfeatures.h  bifrostmanagedialog.cpp  bifrostmanagedialog.h  bifrostmatch.cpp  bifrostmatch.h  bifrostsidebar.cpp  bifrostsidebar.h  bifroststate.h  plugin.cpp
tests/: CMakeLists.txt
tests/harness/: diff_harness.cpp
tests/src/: target_v1.c  target_v2.c
